--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="image-container">
-          <div class="image-wrapper" style="background-image: url('assets/gallery/2017-03-24-Model UN-41-optimized.jpg')">
+          <div class="image-wrapper" style="background-image: url('assets/gallery/2017-03-24-Model-UN-41-preview.jpg')">
             <img class="view" src="{{ '/assets/gallery/2017-03-24-Model UN-41-optimized.jpg' | relative_url }}"/>
           </div>
           <div class="caption">A local high school student participates in the Waterloo Region High School Model UN at the CIGI Campus.</div>
@@ -118,7 +118,7 @@
         </div>
 
         <div class="image-container">
-          <div class="image-wrapper" style="background-image: url('assets/gallery/CIGI Innovation meeting-67-final-optimized.jpg')">
+          <div class="image-wrapper" style="background-image: url('assets/gallery/CIGI-Innovation-meeting-67-final-preview.jpg')">
             <img class="view" src="{{ '/assets/gallery/CIGI Innovation meeting-67-final-optimized.jpg' | relative_url }}"/>
           </div>
           <div class="caption">Bassem Awad, deputy director of international intellectual property law and innovation, at CIGI’s Town Hall Forum on Innovation.</div>
