--- a/_includes/slide10.html
+++ b/_includes/slide10.html
@@ -7,7 +7,7 @@
       
       <h3>Opinion</h3>
       <h1>Modernizing Trade and Investment Agreements</h1>
-      <div class="mobile-img"><img src="assets/slides/web-2.jpg" alt="Trilateral meeting in Ottawa to renegotiate NAFTA)"></div>
+      <div class="mobile-img"><img src="assets/slides/web-preview.jpg" alt="Trilateral meeting in Ottawa to renegotiate NAFTA)"></div>
       
       <div class="photo-caption">Trilateral meeting in Ottawa to renegotiate NAFTA (The Associated Press via The Canadian Press)</div>
       
