--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -151,11 +151,18 @@
       padding-bottom: 0.5rem;
     }
   }
+
+  #smooth-slide-container{
+    p:nth-child(1){
+      padding: 1rem 0 0 0;
+      background: blue;
+    }
+  }
   
   .photo-caption {
-    margin: 0;
+    margin: -0.75rem 0 0 0;
     order: 0;
-    padding-bottom: 0.5rem;
+    padding: 0 0 1rem 0;
     
     &:before {
       content: '\f030';
