left aligning landing page on mobile

--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -16,32 +16,32 @@
   
   // special mobile landscape overwrites ******
   a.db-ns{
-      display:none;
-    }
+    display:none;
+  }
   
   .mv4-ns{
     margin: 0;
   }
-
+  
   .dn-ns{
     display: initial;
   }
-
+  
   a.dn-ns{
     display: block;
   }
-
+  
   .vh-100-ns{
     height: auto;
   }
   .site-header.wrapper{
     max-width: 100%;
   }
-
+  
   .site-header{
     padding: 0.5em;
   }
-
+  
   .mobile-timeline{
     p {
       width: 70%;
@@ -49,7 +49,7 @@
       padding-top: 2em;
     }
   }
-
+  
   .cigi-logo-mobile{
     left:0px;
   }
@@ -168,20 +168,41 @@
       color: inherit;
     }
   }
-
+  
   .mobile-subheading {
     font-weight: 300;
     font-size: 1.75em;
     padding-top: 1em;
     padding-bottom: 0.5em;
   }
-
+  
   #chairs-message{
     padding-top: 2rem;
   }
-
+  
   .no-mobile {
     display: none;
+  }
+  
+  // Landing page
+  .content-wrapper {
+    padding: 0 0 0 2rem !important;
+    .landing-content{
+      width: 90%;
+      .title {
+        margin: 0;
+        width: auto;
+        img {
+          margin-left: -0.5rem;
+        }
+      }
+      .content-text {
+        padding-left: 0;
+        p {
+          margin-left: 0;
+        }
+      }
+    }
   }
 }
 
