--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -42,24 +42,17 @@
     padding: 0.5em;
   }
 
-  .mobile-timeline{
-    p {
-      width: 70%;
-      margin:auto;
-      padding-top: 2em;
-    }
-  }
-
   .cigi-logo-mobile{
     left:0px;
+    padding-top: 0.5rem;
   }
   // ***************************************  
   
   .mobile-timeline{
+    display: block;
+    margin: auto;
     padding-top: 6em;
-    p {
-      padding-bottom: 2em;
-    }
+    width: 70%;
     hr {
       margin-bottom: 2em;
     }
