removed right padding on 2 column slides

--- a/_includes/slide16.html
+++ b/_includes/slide16.html
@@ -1,7 +1,7 @@
 <section class="vh-100-ns standard-slide financials" id="slide-16">
     <div class="background-img" style="background-image: url('assets/slides/canvas.jpg')"></div>
     <div class="wrapper h-100 flex">
-          <div class="slide-content pb4-ns pr6-ns z-1">
+        <div class="slide-content pb4-ns z-1">
             <div class="tabs mb3" data-slide="slide-16">
                 <div class="tab toggle" data-id="tab-1">Auditor's Report</div>
                 <div class="tab toggle" data-id="tab-2">Balance Sheet</div>
@@ -9,7 +9,7 @@
                 <div class="tab toggle" data-id="tab-4">Notes</div>
                 <div class="download"><a class="no-underline" href="#">Download PDF</a></div>
             </div>
-
+            
             <div class="tab-content">
                 <div class="tab" data-id="tab-1">
                     <h3>Financial Report</h3>
@@ -25,16 +25,17 @@
                     {% include slide16-sheet2.html %}
                 </div>
                 <div class="tab" data-id="tab-4">
-
-                    <div class="mobile-only mobile-subheading">Notes</div>
-                    <h4 class="no-mobile">Notes</h4>
-                    <p>Resources contributed for endowment are included in the Long Term Endowment Fund. Certain of such resources are to be held for a period of ten years or upon the dissolution, liquidation or winding up of the Organization, whichever occurs later. Certain of such resources contributed by the Federal Government of Canada is restricted in perpetuity. Investment income earned on resources of the Long Term Endowment Fund is reported in the Operating and Capital Fund.</p>
-                    <p>The Operating and Capital Funds account for the Organization’s program delivery, administrative activities, and non-campus related capital assets.</p>
-                    <p>The Africa Restricted Fund is focused on the effects of climate change on Africa’s security and socioeconomic development.</p>
-                    <p>The John Holmes Fund is focused on funding the operations of the library.</p>
-                    <p>The Decade Fund is focused on long-term research and capacity building projects to contribute to the development of innovative ideas that are relevant to the Province of Ontario.</p>
-                    <p>The Campus Fund is a Organization initiative in collaboration with provincial and federal governments designed to house several graduate schools and programs. Two such initiatives are the Balsillie School of International Affairs (BSIA) and the ILRP. As a hub of different schools and programs, the Campus Fund cultivates an interdisciplinary learning environment focused on developing knowledge of global issues</p>
-
+                    
+                    <div class="notes-wrapper pr6-ns">
+                        <div class="mobile-only mobile-subheading">Notes</div>
+                        <h4 class="no-mobile">Notes</h4> 
+                        <p>Resources contributed for endowment are included in the Long Term Endowment Fund. Certain of such resources are to be held for a period of ten years or upon the dissolution, liquidation or winding up of the Organization, whichever occurs later. Certain of such resources contributed by the Federal Government of Canada is restricted in perpetuity. Investment income earned on resources of the Long Term Endowment Fund is reported in the Operating and Capital Fund.</p>
+                        <p>The Operating and Capital Funds account for the Organization’s program delivery, administrative activities, and non-campus related capital assets.</p>
+                        <p>The Africa Restricted Fund is focused on the effects of climate change on Africa’s security and socioeconomic development.</p>
+                        <p>The John Holmes Fund is focused on funding the operations of the library.</p>
+                        <p>The Decade Fund is focused on long-term research and capacity building projects to contribute to the development of innovative ideas that are relevant to the Province of Ontario.</p>
+                        <p>The Campus Fund is a Organization initiative in collaboration with provincial and federal governments designed to house several graduate schools and programs. Two such initiatives are the Balsillie School of International Affairs (BSIA) and the ILRP. As a hub of different schools and programs, the Campus Fund cultivates an interdisciplinary learning environment focused on developing knowledge of global issues</p>
+                    </div>
                 </div>
             </div>
         </div>
