mobile timeline redesign

--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -50,7 +50,20 @@
 
   <div class="wrapper dn-ns w-90 mobile-timeline">
     <p>Explore CIGI cannot be displayed on your mobile device. For the best experience, please view on a desktop browser.</p>
-    <hr>
-    <p class="tc"><a href="www.cigionline.org/ar">View 2017 Annual Report</a></p>
+    <p>Otherwise you can continue viewing the CIGI 2017 Annual Report.</p>
+    <div class="view-ar">
+        <div class="no-underline link pointer pl3-ns pl0">View Annual Report</div>
+        <div class="down pointer">
+            <div class="arrows">
+                <i class="fa fa-angle-down arrow arrow-2" aria-hidden="true"></i>
+                <i class="fa fa-angle-down arrow arrow-1" aria-hidden="true"></i>
+            </div>
+        </div>
+    </div>
+    <p>Enter your email address to receive a convenient link to view Explore CIGI on a desktop browser.</p>
+    <form>
+      <input type="text" name="email">
+      <button type="submit" value="Send">Send</button>
+    </form>
   </div>
 </section>
