mobile timeline styling

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -350,7 +350,7 @@ header.white {
   }
 }
 
-.landing {
+.landing, .mobile-timeline {
   .landing-content {
     display: table;
     font-size: 18px;
