--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -52,13 +52,34 @@
     display: block;
     margin: auto;
     padding-top: 6em;
-    width: 70%;
+    width: 100%;
+    color: $text-color;
     hr {
       margin-bottom: 2em;
     }
     a {
       color: $accent-color;
       text-decoration: none;
+    }
+    p, form {
+      float: left;
+    }
+    .text {
+      width: 90%;
+      margin: auto;
+    }
+    .nav {
+      height: 100%;
+      margin: 1rem 3rem;
+      color: $accent-color;
+      font-size: 16px;
+      width: 100vw;
+      .arrow {
+        color: $accent-color;
+      }
+    }
+    .link {
+      border-top: none !important;
     }
   }
   
