--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -48,7 +48,7 @@
     </div>
   </div>
   
-  <div class="dn-ns mobile-timeline wrapper">
+  <div class="dn-ns mobile-timeline">
     <div class="text">
       <p>Explore CIGI cannot be displayed on your mobile device. For the best experience, please view on a desktop browser.</p>
       <p>Otherwise you can continue viewing the CIGI 2017 Annual Report.</p>
