fixing right margins

--- a/_includes/slide16.html
+++ b/_includes/slide16.html
@@ -1,7 +1,7 @@
 <section class="vh-100-ns standard-slide financials" id="slide-16">
     <div class="background-img" style="background-image: url('assets/slides/canvas.jpg')"></div>
     <div class="wrapper h-100 flex">
-        <div class="slide-content pb4-ns z-1">
+        <div class="slide-content pb4-ns pr6-ns z-1">
             <div class="tabs mb3" data-slide="slide-16">
                 <div class="tab toggle" data-id="tab-1">Auditor's Report</div>
                 <div class="tab toggle" data-id="tab-2">Balance Sheet</div>
