--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -1,7 +1,7 @@
 <section class="vh-100-ns standard-slide joint-message slide-2" id="slide=2">
     <div class="background-img right-img" style="background-image: url('assets/slides/RM-headshot-smaller.jpg')"></div>
     <div class="wrapper h-100 flex">
-        <div class="slide-content pb4-ns pb6-ns z-1">
+        <div class="slide-content pb4-ns pb6-ns pr6-ns z-1">
             <div class="tabs mb3" data-slide="slide-2" id="messages-tabs">
                 <div class="tab toggle" data-id="tab-1">President's Message</div>
                 <div class="tab toggle" data-id="tab-2">Chair's Message</div>
