--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -57,19 +57,14 @@
     <div class="nav">
       <div class="view-ar">
         <div class="no-underline link pointer pl3-ns pl0">View Annual Report</div>
-        <div class="down pointer">
-          <div class="arrows">
-            <i class="fa fa-angle-down arrow arrow-2" aria-hidden="true"></i>
-            <i class="fa fa-angle-down arrow arrow-1" aria-hidden="true"></i>
-          </div>
-        </div>
       </div>
     </div>
 
     <div class="text">
       <p>Enter your email address to receive a convenient link to view Explore CIGI on a desktop browser.</p>
       <form>
-        <input type="text" name="email">
+        <input type="text" name="email" placeholder="Enter your email">
+        <br>
         <button type="submit" value="Send">Send</button>
       </form>
     </div>
