--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -264,3 +264,39 @@ header.wrapper{
   break-inside: avoid;
   page-break-inside: avoid;
 }
+
+// Animations
+@keyframes arrow-up {
+  0% {
+    opacity: 0;
+  }
+  
+  30% {
+    opacity: 1;
+  }
+  
+  50% {
+    top: -45%;
+  }
+  
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes arrow-down {
+  0% {
+    opacity: 0;
+  }
+  
+  30% {
+    opacity: 1;
+  }
+  
+  50% {
+    top: 45%;
+  }
+  
+  100% {
+    opacity: 0;
+  }
+}
