--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -105,8 +105,9 @@ header {
 
 h1 {
   font-size: 1.75rem;
-  font-weight: 400;
+  font-weight: 500;
   padding: 0.5rem 0;
+  color: black;
   
   @include media-query($on-palm) {
     font-size: 1.25rem;
