--- a/_includes/slide16-sheet2.html
+++ b/_includes/slide16-sheet2.html
@@ -44,7 +44,7 @@
         <td></td>
     </tr>
     <tr>
-        <td>Research, Conferences & Partnerships</td>
+        <td>Research, Conferences and Partnerships</td>
         <td>$15,931,107&nbsp;</td>
         <td>$14,542,584&nbsp;</td>
     </tr>
