changed placement of date, added (Loss)

--- a/_includes/slide16-auditor.html
+++ b/_includes/slide16-auditor.html
@@ -13,4 +13,4 @@ To the Directors of The Centre for International Governance Innovation,</p>
         The audited financial statements of the Organization are available upon request by contacting the Organization.
     </p>
 <div><img src="{{ "/assets/auditors-sig.png" | relative_url }}" alt="Zeifmans LLP"></div>   
-<p>Chartered Accountants<br>Licensed Public Accountants<br>Toronto, Ontario<br> December 1, 2017</p>
+<p>Chartered Accountants<br>Licensed Public Accountants<br>Toronto, Ontario, December 1, 2017</p>
