--- a/_includes/slide16-sheet2.html
+++ b/_includes/slide16-sheet2.html
@@ -9,7 +9,7 @@
     </thead>
 <tbody>
     <tr class="section">
-        <td>Revenue</td>
+        <td>Revenue (Loss)</td>
         <td></td>
         <td></td>
     </tr>
