--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -595,16 +595,13 @@ header.white {
     }
     @include media-query($small-phone) {
       float: none;
+    }
+    @include media-query($on-laptop) {
       width: 100%;
     }
     @media (min-width:$medium-screen) {
       font-size: 1em;
-      width: 100%;
       padding-top: 1rem;
-    }
-
-    @include media-query($on-palm) {
-        width: 100%;
     }
     
     td:nth-child(1) {
