took a look at the .pr6-ns overrides, but we need several overrides because the 2 column layouts are being treated differently than the other slides, and the pr6-ns class is being redefined here after the pr6-ns class for everything else. There are separate pr6-ns overrides for the financials/messages slides and for all the other slides - the beauty of tachyons.

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -309,7 +309,7 @@ p {
       display: none;
     }
     .pr6-ns {
-      padding-right: 4em;
+      padding-right: 2rem;
     }
   }
   @include media-query($small-phone) {
@@ -318,9 +318,6 @@ p {
     }
     .wrapper{
       padding-top: 2rem;
-    }
-    .pr6-ns {
-      padding-right: 0;
     }
   }
 }
