--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -56,12 +56,14 @@
     
     <div class="nav">
       <div class="view-ar">
-        <div class="no-underline link pointer pl3-ns pl0">View Annual Report</div>
-        <div class="arrow-container">
-          <div class="down pointer">
-            <div class="arrows">
-              <i class="fa fa-angle-down arrow arrow-2" aria-hidden="true"></i>
-              <i class="fa fa-angle-down arrow arrow-1" aria-hidden="true"></i>
+        <div class="no-underline link pointer">View Annual Report
+          
+         
+            <div class="down pointer">
+              <div class="arrows">
+                <i class="fa fa-angle-down arrow arrow-2" aria-hidden="true"></i>
+                <i class="fa fa-angle-down arrow arrow-1" aria-hidden="true"></i>
+
             </div>
           </div>
         </div>
@@ -77,5 +79,9 @@
       </form>
     </div>
   </div>
+  
+  
+  
+  
   
 </section>
