--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,8 +38,9 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
   {% endcomment %}
 
-
-  {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
-  {% endif %}
+
+ <!-- {% if jekyll.environment == 'production' and site.google_analytics %}
+ 
+  {% endif %} -->
 </head>
