remove .font style, not working update clear button to have grey background, adjust spacing

--- a/_assets/css/custom/timeline.scss
+++ b/_assets/css/custom/timeline.scss
@@ -523,8 +523,14 @@ $article-slide-timing-function: ease-in-out;
 
 .select-clear {
   align-items: center;
-  color: $grey-color;
+  color: white;
+  background: $grey-25;
+  border: 1px solid transparent;
   display: flex;
+  svg{
+    width: 10px;
+    height: 10px;
+  }
 }
 
 .select-content {
