updated GA to include slide number

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,9 +38,7 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
   {% endcomment %}
 
-  {% include google-analytics.html %}
-
- <!-- {% if jekyll.environment == 'production' and site.google_analytics %}
- 
-  {% endif %} -->
+  {% if jekyll.environment == 'production' and site.google_analytics %}
+    {% include google-analytics.html %}
+  {% endif %}
 </head>
