removing part of if condition

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,7 +38,7 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
   {% endcomment %}
 
-  {% if jekyll.environment == 'production' and site.google_analytics %}
+  {% if jekyll.environment == 'production' %}
     {% include google-analytics.html %}
   {% endif %}
 </head>
