--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -72,16 +72,14 @@
     
     <div class="text">
       <p>Enter your email address to receive a convenient link to view Explore CIGI on a desktop browser.</p>
-      <form>
-        <input type="text" name="email" placeholder="Enter your email">
+      
+      <form action="{{ site.assets_base_url }}/assets/mail" method="post">
+        <input type="text" name="email" id="email" placeholder="Enter your email">
         <br>
-        <button type="submit" value="Send">Send</button>
+        <button type="submit" name="Submit" id="Submit" value="Send">Send</button>
       </form>
     </div>
   </div>
   
-  
-  
-  
-  
+
 </section>
