--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -73,7 +73,7 @@
     <div class="text">
       <p>Enter your email address to receive a convenient link to view Explore CIGI on a desktop browser.</p>
       
-      <form action="{{ site.assets_base_url }}/assets/mail" method="post">
+      <form action="{{ site.assets_base_url }}/assets/mail.js" method="post">
         <input type="text" name="email" id="email" placeholder="Enter your email">
         <br>
         <button type="submit" name="Submit" id="Submit" value="Send">Send</button>
