remove form and and center arrows

--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -48,7 +48,7 @@
     </div>
   </div>
   
-  <div class="dn-ns mobile-timeline">
+  <div class="mobile-timeline">
     <div class="text">
       <p>Explore CIGI cannot be displayed on your mobile device. For the best experience, please view on a desktop browser.</p>
       <p>Otherwise you can continue viewing the CIGI 2017 Annual Report.</p>
@@ -56,32 +56,14 @@
     
     <div class="nav">
       <div class="view-ar">
-        <div class="no-underline link pointer">View Annual Report
-          
-         
+        View Annual Report
             <div class="down pointer">
               <div class="arrows">
                 <i class="fa fa-angle-down arrow arrow-2" aria-hidden="true"></i>
                 <i class="fa fa-angle-down arrow arrow-1" aria-hidden="true"></i>
-
+              </div>
             </div>
-          </div>
         </div>
-      </div>
     </div>
-    
-    <div class="text">
-      <p>Enter your email address to receive a convenient link to view Explore CIGI on a desktop browser.</p>
-      <form>
-        <input type="text" name="email" placeholder="Enter your email">
-        <br>
-        <button type="submit" value="Send">Send</button>
-      </form>
-    </div>
-  </div>
-  
-  
-  
-  
   
 </section>
