--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -50,10 +50,8 @@
 
   .mobile-timeline{
     display: block;
-    margin: auto;
     padding-top: 6em;
-    width: 100%;
-    color: $text-color;
+    
     hr {
       margin-bottom: 2em;
     }
@@ -70,29 +68,10 @@
     // Middle ribbbon
     .nav {
       padding: 1.5rem 0;
-      margin: 0.5rem 0 1.5rem 0;
       color: $accent-color;
-      font-size: 16px;
-      width: 100vw;
+      font-size:1.5rem;
       background-color: #e2e1dc;
-      
-      .view-ar{
-        position: relative;
-        text-align: center;
-      }
-
-      .fa {
-        display: inline-block;
-        font-size: 1.75rem;
-        line-height: 1rem;
-        margin-top: 5px;
-      }
-
-      .down.pointer {
-        position: relative;
-        top: 0;
-        left: 0;
-      }
+      text-align: center;
 
       .arrows {
         height: 25px;
@@ -100,15 +79,9 @@
       }
       
       .arrow {
-        opacity: 1;
         position: absolute;
-        top: 0;
-        transform-origin: 0%;
-      }
-
-      .up,
-      .down {
-        position: absolute;
+        left: 50%;
+        transform: translate(-50%, 0);
       }
 
       .down {
@@ -120,21 +93,8 @@
           animation: arrow-down 2.5s 1.25s ease-in-out infinite;
         }
       }
-      
-      .up {
-        .arrow-1 {
-          animation: arrow-up 2.5s ease-in-out infinite;
-        }
-        
-        .arrow-2 {
-          animation: arrow-up 2.5s 1.25s ease-in-out infinite;
-        }
-      }
     }
-    
-    .link {
-      border-top: none !important;
-    }
+
     
     // Form
     input, button{
