update timeline.js with auth info

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 
   <meta property="og:title" content="CIGI Annual Report 2017" />
   <meta property="og:site_name" content="CIGI Annual Report 2017"/>
-  <meta property="og:url" content="https://staging.cigionline.org/interactives/2017annualreport" />
+  <meta property="og:url" content="https://www.cigionline.org/interactives/2017annualreport" />
   <meta property="og:locale" content="en_CA" />
   <meta property="fb:app_id" content="995454813805233" />
   <meta property="og:type" content="article" />
