need to separate down arrow classes for mobile and desktop

--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -55,7 +55,7 @@
     </div>
     
     <div class="nav">
-      <div class="view-ar">
+      <div class="view-ar-mobile">
         View Annual Report
             <div class="down pointer">
               <div class="arrows">
