--- a/_includes/slide17.html
+++ b/_includes/slide17.html
@@ -20,7 +20,7 @@
       <div class="view-article pb2 pt2">
           <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/about/annual-report?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Télécharger le Rapport annuel en français (PDF).</a></div>
       <div class="view-article pb2 pt2">
-          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/about"><i class="fa fa-file-text-o" aria-hidden="true"></i>Learn more about CIGI and its partners.</a>
+          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/about/partners"><i class="fa fa-file-text-o" aria-hidden="true"></i>Learn more about CIGI and its partners.</a>
       </div>
       
     </div>
