--- a/_includes/slide4.html
+++ b/_includes/slide4.html
@@ -13,7 +13,7 @@
       
       <p>Opening with the sensational arrest of IMF Managing Director Dominique Strauss-Kahn, the book reveals that this sordid episode was only one in a series of setbacks for the IMF as financial conflagration spread from Greece to Ireland, Portugal, Spain, Italy and Cyprus — threatening to engulf a region comprising nearly one-fifth of world economic output.</p>
       
-      <p><em>Foreign Affairs</em> praised <em>Laid Low</em>’s authoritative account of the euro-zone crisis: “Until now, a serious treatment of the International Monetary Fund’s role in the crisis has been missing.” A sentiment doubtlessly echoed by government officials in Washington, who asked him to testify before the US Congress on “Lessons from the IMF’s Bailout of Greece.”</p>
+      <p><em>Foreign Affairs</em> praised <em>Laid Low</em>’s authoritative account of the euro-zone crisis: “Until now, a serious treatment of the International Monetary Fund’s role in the crisis has been missing.” A sentiment doubtlessly echoed by government officials in Washington, who asked Blustein to testify before the US Congress on “Lessons from the IMF’s Bailout of Greece.”</p>
       
       
       <div class="view-article pb2 pt2">
