update og description for sharing

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
   <meta property="og:locale" content="en_CA" />
   <meta property="fb:app_id" content="995454813805233" />
   <meta property="og:type" content="article" />
-  <meta property="og:description" content="" />
+  <meta property="og:description" content="Explore a year of research, opinion and expertise in CIGI’s first interactive annual report." />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@CIGIOnline" />
