update youtube link to only show related videos, remove unused html files, update facebook share to new version

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -48,7 +48,12 @@ layout: compress
 
       <script src="https://platform.twitter.com/widgets.js"></script>
       <script src="{{ site.assets_base_url }}/assets/bundle{{ site.env.HASH }}.js"></script>
+
     </div>
+
+    {% if jekyll.environment == 'production' %}
+      {% include facebook.html %}
+    {% endif %}
   </body>
 
 </html>
