--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
   <meta property="og:type" content="article" />
   <meta property="og:description" content="Explore a year of research, opinion and expertise in CIGI’s first interactive annual report." />
   
-  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@CIGIOnline" />
   <meta property="og:image" content="{{ '/assets/AR-landing-withlogo.jpg' | absolute_url}}"/>
   <meta property="og:image:secure_url" content="{{ '/assets/AR-landing-withlogo.jpg'| absolute_url }}"/>
