--- a/_includes/slide17.html
+++ b/_includes/slide17.html
@@ -15,10 +15,10 @@
       <p>This new, interactive annual report is part of CIGI’s digital-first approach to addressing the world’s most pressing international governance questions. Follow cigionline.org over the coming year as we offer research, opinion and expertise on, to name a few, Indigenous issues, developing a data strategy for Canada and the Group of Seven summit, which Canada will host in Charlevoix, Quebec.</p>
       
       <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/about/annual-report?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Download Annual Report PDF.</a>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/sites/default/files/English_AnnualReport2017_CIGI.pdf?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Download Annual Report PDF.</a>
       </div>
       <div class="view-article pb2 pt2">
-          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/about/annual-report?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Télécharger le Rapport annuel en français (PDF).</a></div>
+          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/sites/default/files/French_AnnualReport2017_CIGI.pdf?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Télécharger le Rapport annuel en français (PDF).</a></div>
       <div class="view-article pb2 pt2">
           <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/about/partners"><i class="fa fa-file-text-o" aria-hidden="true"></i>Learn more about CIGI and its partners.</a>
       </div>
