edits to document links and gallery captions

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -45,7 +45,7 @@
         <div class="image-wrapper" style="background-image: url('assets/gallery/CIGI-North-of-60_pre.jpg')">
           <img class="view" src="{{ '/assets/gallery/CIGI-North-of-60.jpg' | relative_url }}"/>
         </div>
-        <div class="caption">Maatalii Okalik, president of the National Inuit Youth Council and Jennifer Spence, co-author of North of 60: Toward a Renewed Canadian Arctic Agenda.</div>
+        <div class="caption">Maatalii Okalik, president of the National Inuit Youth Council and Jennifer Spence, co-editor of <em>North of 60: Toward a Renewed Canadian Arctic Agenda</em>.</div>
       </div>
       
       <div class="image-container">
@@ -123,7 +123,7 @@
         <div class="image-wrapper" style="background-image: url('assets/gallery/CIGI-Innovation-meeting-67-final-preview.jpg')">
           <img class="view" src="{{ '/assets/gallery/CIGI Innovation meeting-67-final-optimized.jpg' | relative_url }}"/>
         </div>
-        <div class="caption">Bassem Awad, deputy director of international intellectual property law and innovation, at CIGI’s Town Hall Forum on Innovation.</div>
+        <div class="caption">Bassem Awad, deputy director, intellectual property law and innovation, at CIGI’s Town Hall Forum on Innovation.</div>
       </div>
       
       <div class="image-container">
