--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -1,15 +1,41 @@
 <section class="vh-100-ns standard-slide joint-message slide-2" id="slide=2">
-    <div class="background-img right-img" style="background-image: url('assets/slides/RM-headshot-smaller.jpg')"></div>
+    <div class="background-img right-img" style="background-image: url('assets/slides/JB-headshot-smaller.jpg')"></div>
     <div class="wrapper h-100 flex">
         <div class="slide-content pb4-ns pb6-ns pr6-ns z-1">
             <div class="tabs mb3" data-slide="slide-2" id="messages-tabs">
-                <div class="tab toggle" data-id="tab-1">President's Message</div>
-                <div class="tab toggle" data-id="tab-2">Chair's Message</div>
+                <div class="tab toggle" data-id="tab-1">Chair's Message</div>
+                <div class="tab toggle" data-id="tab-2">President's Message</div>
             </div>
             <div class="tab-content">
-                <div class="tab" data-id="tab-1">
-                    <h3>Messages</h3>
-                    <h1>President’s Message</h1>
+                    <div class="tab" data-id="tab-1" data-name="chairs-message">
+                            <h3>Messages</h3>
+                            <h1 id="chairs-message">Chair’s Message</h1>
+                            
+                            <div class="col">
+                                
+                                <p> Our globalized economy has seen, in a very short amount of time, a fundamental shift away from the delivery of goods and services to international commerce based on ideas. Changing intellectual property (IP) regimes, new trade agreements and rapidly evolving technologies demand up-to-date responses from researchers and thought leaders.</p>
+                                
+                                <p>CIGI has responded with a new organizational approach to these issues. A redesigned website serves as a digital platform to combine research and expertise to deliver journalistic analysis. It is an approach that builds on CIGI’s already solid research programs to deliver trustworthy and timely content that stands out amidst a noisy field of information providers with little quality control.</p>
+                                
+                                <p>Already, CIGI has delivered a wealth of original research accompanied by timely and in-depth analysis, multimedia interviews and explanatory pieces. From the North American Free Trade Agreement (NAFTA) to innovation, this digital-first content demonstrates CIGI’s commitment to meeting the needs of today’s decision makers while reaching new audiences.</p>
+                                
+                                <p> In the policy arena, CIGI responded quickly to the announcement of NAFTA renegotiations, publishing a series of original pieces and interviews on NAFTA and the knowledge economy. CIGI experts simultaneously participated in discussions with Canadian government officials looking for a road map on trade, innovation and IP under a NAFTA 2.0.</p>
+                                
+                                <p>CIGI has also led conversations around a new approach to stimulating innovation, which is much needed to drive economic development and prosperity at a time when policies and incentives have not always kept up with our changing economy. The New Thinking on Innovation series kicked off the conversation, and CIGI has also looked to the main drivers of innovation — people and the societal contexts that foster their successful innovations.</p>
+                                
+                                <p>The innovation lens extends to global governance questions. CIGI’s World Refugee Council, led by former Canadian Minister of Foreign Affairs Lloyd Axworthy, brings together the best and brightest refugee experts, former presidents and prime ministers, civil society leaders, a Nobel Peace Prize laureate and others to bring bold thinking and innovative approaches to this global problem.</p>
+                                
+                                <p>Our many global and local partners can be proud of CIGI’s new approach this year. It would not have been possible without their support — especially from the Governments of Canada and Ontario, and the City of Waterloo — to help make CIGI a relevant, trusted and innovative Canadian think tank with a global perspective.</p>
+                                
+                                <p class="signature"><strong>Jim Balsillie</strong><br>
+                                    <em>Chair, CIGI Board of Directors</em></p>
+                                    
+                            </div>
+                            <div class="photo-caption no-mobile">Photo of Jim Balsillie</div>
+                    </div>
+                    <div class="mobile-only"><hr></div>
+                <div class="tab" data-id="tab-2">
+                    <h1 id="presidents-message">President’s Message</h1>
                     
                     <div class="col">
                         
@@ -32,37 +58,12 @@
                         <p class="signature"><strong>Rohinton P. Medhora</strong><br>
                             <em>President, CIGI</em></p>
                             
-                        </div>
-                        <div class="photo-caption no-mobile">Photo of Rohinton P. Medhora</div>
                     </div>
-                    <div class="mobile-only"><hr></div>
-                    <div class="tab" data-id="tab-2" data-name="chairs-message">
-                        <h3>Messages</h3>
-                        <h1 id="chairs-message">Chair’s Message</h1>
-                        
-                        <div class="col">
-                            
-                            <p> Our globalized economy has seen, in a very short amount of time, a fundamental shift away from the delivery of goods and services to international commerce based on ideas. Changing intellectual property (IP) regimes, new trade agreements and rapidly evolving technologies demand up-to-date responses from researchers and thought leaders.</p>
-                            
-                            <p>CIGI has responded with a new organizational approach to these issues. A redesigned website serves as a digital platform to combine research and expertise to deliver journalistic analysis. It is an approach that builds on CIGI’s already solid research programs to deliver trustworthy and timely content that stands out amidst a noisy field of information providers with little quality control.</p>
-                            
-                            <p>Already, CIGI has delivered a wealth of original research accompanied by timely and in-depth analysis, multimedia interviews and explanatory pieces. From the North American Free Trade Agreement (NAFTA) to innovation, this digital-first content demonstrates CIGI’s commitment to meeting the needs of today’s decision makers while reaching new audiences.</p>
-                            
-                            <p> In the policy arena, CIGI responded quickly to the announcement of NAFTA renegotiations, publishing a series of original pieces and interviews on NAFTA and the knowledge economy. CIGI experts simultaneously participated in discussions with Canadian government officials looking for a road map on trade, innovation and IP under a NAFTA 2.0.</p>
-                            
-                            <p>CIGI has also led conversations around a new approach to stimulating innovation, which is much needed to drive economic development and prosperity at a time when policies and incentives have not always kept up with our changing economy. The New Thinking on Innovation series kicked off the conversation, and CIGI has also looked to the main drivers of innovation — people and the societal contexts that foster their successful innovations.</p>
-                            
-                            <p>The innovation lens extends to global governance questions. CIGI’s World Refugee Council, led by former Canadian Minister of Foreign Affairs Lloyd Axworthy, brings together the best and brightest refugee experts, former presidents and prime ministers, civil society leaders, a Nobel Peace Prize laureate and others to bring bold thinking and innovative approaches to this global problem.</p>
-                            
-                            <p>Our many global and local partners can be proud of CIGI’s new approach this year. It would not have been possible without their support — especially from the Governments of Canada and Ontario, and the City of Waterloo — to help make CIGI a relevant, trusted and innovative Canadian think tank with a global perspective.</p>
-                            
-                            <p class="signature"><strong>Jim Balsillie</strong><br>
-                                <em>Chair, CIGI Board of Directors</em></p>
-                            
-                            </div>
-                            <div class="photo-caption no-mobile">Photo of Jim Balsillie</div>
-                        </div>
-                    </div>
+                    <div class="photo-caption no-mobile">Photo of Rohinton P. Medhora</div>
                 </div>
+                
+                
             </div>
-        </section>
+        </div>
+    </div>
+</section>
