update twitter icon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
       <div id="view-ar-link" class="tab">Annual Report</div>
     </div>
     <div class="f4 ml3"><a class="no-underline" id="global-share-facebook" target="_blank"><i class="fa fa-facebook"></i></a></div>
-    <div class="f4 ml3"><a class="no-underline" id="global-share-twitter" target="_blank"><i class="fa fa-twitter"></i></a></div>
+    <div class="f4 ml3"><a class="no-underline" id="global-share-twitter" target="_blank"><i class="fa fa-x-twitter"></i></a></div>
     <div id="table-of-contents-button" class="f5 ml3 pointer"></div>
   </div>
 </header>
